--- a/middle_end/BUILD.bazel
+++ b/middle_end/BUILD.bazel
@@ -30,9 +30,11 @@ boot_library(
 )
 
 ## defined in compilerlibs/Makefile.compilerlibs
-## used by //compilerlibs:ocamlmiddleend and //compilerlibs:ocamloptcomp
-# boot_library(
-boot_archive(
+## //asmcomp:ocamloptcomp (archive) needs it as a lib, not an archive
+## //tools:ocamlobjinfo (executable)
+## TODO: select archive=True or False
+# boot_archive(
+boot_library(
     name = "ocamlmiddleend",
     manifest  = [
         ## NB: the makefiles take pains to put stuff in order, across
