--- a/testsuite/tests/lib-bigarray/BUILD.bazel
+++ b/testsuite/tests/lib-bigarray/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bzl:rules.bzl",
+load("//bzl/rules/test:rules.bzl",
      "test_archive",
      "test_executable",
      "test_library",
@@ -7,7 +7,6 @@ load("//bzl:rules.bzl",
      "ocaml_test",
      "expect_test",
      "inline_expect_test",
-     "lambda_expect_test"
 )
 
 test_suite(
@@ -22,11 +21,11 @@ test_suite(
 )
 
 expect_test(
-    name     = "Bigarrays_test",
-    stdout   = "Bigarrays.stdout",
-    expected = "bigarrays.reference",
-    main     = ":Bigarrays",
-    timeout  = "short"
+    name    = "Bigarrays_test",
+    stdout  = "Bigarrays.stdout",
+    expect  = "bigarrays.reference",
+    main    = ":Bigarrays",
+    timeout = "short"
 )
 
 test_module(
@@ -44,7 +43,7 @@ test_module(
 expect_test(
     name     = "Change_layout_test",
     stdout   = "change_layout.stdout",
-    expected = "change_layout.reference",
+    expect   = "change_layout.reference",
     main     = ":Change_layout",
     timeout  = "short"
 )
@@ -61,7 +60,7 @@ test_module(
 expect_test(
     name     = "Fftba_test",
     stdout   = "fftba.stdout",
-    expected = "fftba.reference",
+    expect   = "fftba.reference",
     main     = ":Fftba",
     timeout  = "short"
 )
@@ -75,7 +74,7 @@ test_module(
 expect_test(
     name     = "Pr5115_test",
     stdout   = "pr5115.stdout",
-    expected = "pr5115.reference",
+    expect   = "pr5115.reference",
     main     = ":Pr5115",
     timeout  = "short"
 )
@@ -92,7 +91,7 @@ test_module(
 expect_test(
     name     = "Weak_bigarray_test",
     stdout   = "weak_bigarray.stdout",
-    expected = "weak_bigarray.reference",
+    expect   = "weak_bigarray.reference",
     main     = ":Weak_bigarray",
     timeout  = "short"
 )
